[gd_scene load_steps=10 format=2]

[ext_resource path="res://TutorialEnjoy.gd" type="Script" id=1]
[ext_resource path="res://fonts/Bungee-Shade.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/buttons/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Bungee-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://sounds/layered-gunshot-7_A_minor.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 46
font_data = ExtResource( 4 )

[node name="TutorialEnjoy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.760254
margin_top = -1.0
margin_right = -0.760254
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="TutorialArea" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 100.0
margin_right = -150.0
margin_bottom = -100.0
rect_min_size = Vector2( 300, 250 )

[node name="Label" type="Label" parent="TutorialArea"]
margin_right = 780.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 1 )
text = "Enjoy

and Good Luck"
align = 1

[node name="CenterBox" type="HBoxContainer" parent="TutorialArea"]
margin_top = 181.0
margin_right = 780.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="TutorialArea/CenterBox"]
margin_top = 83.0
margin_right = 780.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="RightButton" parent="TutorialArea/CenterBox/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 780.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "  Start Game"
scene_to_load = "res://scenes/Scene0.tscn"

[node name="Bounce" type="Tween" parent="TutorialArea/CenterBox/VBoxContainer/RightButton"]
repeat = true
playback/repeat = true

[node name="ShotgunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="TutorialArea/CenterBox/VBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
